src/testData/analysis/macroName.cr
macro <error descr="'..' is a pseudo-method and can't be redefined">..</error>
end

macro <error descr="'...' is a pseudo-method and can't be redefined">...</error>
end

macro <error descr="'&&' is a pseudo-method and can't be redefined">&&</error>
end

macro &
end

macro <error descr="'||' is a pseudo-method and can't be redefined">||</error>
end

macro |
end

macro <error descr="'!' is a pseudo-method and can't be redefined">!</error>
end

macro +
end

macro foo
end

macro foo=
end